clusters/cluster0/kubernetes/apps/media/bookboss/app/bookboss-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookboss-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: bookboss
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
