clusters/cluster0/kubernetes/apps/media/bookboss/app/bookboss-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookboss
  namespace: media
spec:
  hostnames:
  - bookboss.biggs.dog
  parentRefs:
  - name: wildcard-biggs-dog
    namespace: networking
  rules:
  - backendRefs:
    - name: bookboss-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
